help_media = [
]
help_files = [
  'creating-a-child-user.page',
  'index.page',
  'internet.page',
  'introduction.page',
  'legal.xml',
  'restricting-applications.page',
  'software-installation.page',
]

gnome.yelp(meson.project_name(),
  sources: help_files,
  media: help_media,
  symlink_media: true,
)
